<resources>
    <string name="app_name">OmaLaakekalenteri</string>

    <string name="button_new_medicine">Lisää Lääke</string>
    <string name="kuukausi">Kuukausi</string>
    <string name="toMainScreen">Lääkkeet</string>
    <string name="viikko">Viikko</string>
    <string name="textview_medicine_info_name">Lääkkeen nimi</string>
    <string name="textview_medicine_info_dosage">Vahvuus</string>
    <string name="textview_medicine_info_active_ingredient">Vaikuttava lääkeaine</string>
    <string name="textview_medicine_info_times_a_day">Monta kertaa päivässä</string>
    <string name="textview_medicine_info_quantity">Annoksia</string>
    <string name="button_add_medicine">Lisää lääke</string>
    <string name="button_medicine_remove">Poista lääke</string>
    <string name="etusivulle">Etusivulle</string>
    <string name="button_return_to_list">Lääkelista</string>
    <string name="button_select_day">Avaa päivä</string>
    <string name="textview_date">Päivämäärä</string>
    <string name="anna_l_kkeen_tiedot">Anna lääkkeen tiedot</string>
    <string name="tallenna">Tallenna</string>
    <string name="peruuta">Peruuta</string>
    <string name="nimi">Nimi</string>
    <string name="vaikuttava_aine">Vaikuttava aine</string>
    <string name="kuinka_monta_kertaa_p_iv_ss_l_ke_tulee_ottaa">Kuinka monta kertaa päivässä lääke tulee ottaa?</string>
    <string name="vaikuttavan_aineen_m_r_kerta_annoksessa_esim_burana_600mg">Vaikuttavan aineen määrä milligrammoina?</string>
    <string name="paljonko_l_kepakkauksessa_on_annoksia_yhteens_esim_kpl">Paljonko lääkepakkauksessa on annoksia yhteensä? (Esim. kpl)</string>
    <string name="paljonko_l_kett_tulee_ottaa_kerta_annoksena_esim_kpl_m_r">Paljonko lääkettä tulee ottaa kerta-annoksena? (Esim. kpl-määrä)</string>
    <string name="l_kkeesi_ovat_loppuneet">Lääkkeesi ovat loppuneet!</string>
    <string name="l_kkeiden_m_r_kerta_annoksessa">Lääkkeiden määrä kerta-annoksessa:</string>
    <string name="olen_ottanut_l_keannoksen">Olen ottanut lääkeannoksen</string>
    <string name="t_m_l_ke_on_loppunut">Tämä lääke on loppunut!</string>
    <string name="kalenteri">Kalenteri</string>
    <string name="l_kelista">Lääkelista</string>
    <string name="tervetuloa_k_ytt_m_n_omal_kekalenteria">Tervetuloa käyttämään OmaLääkekalenteria!</string>
    <string name="otettu">Otettu</string>
    <string name="ei_otettu">ei otettu</string>
    <string name="kello">Kello</string>
    <string name="muistutusta_ei_ole_asetettu">Muistutusta ei ole asetettu!</string>
    <string name="textview_date_med_name">Nimi</string>
    <string name="textview_date_med_times">Monta kertaa päivässä</string>
    <string name="p_iv_n_kokonaisl_kem_r">Päivän kokonaislääkemäärä</string>
    <string name="muistutuksen_asetus">Muistutuksen asetus</string>
    <string name="aseta_muistutus">Aseta muistutus</string>
    <string name="hylk_muistutus">Hylkää Muistutus</string>

</resources>