<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/calanderButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="26dp"
        android:text="@string/kalenteri"
        app:backgroundTint="#34CFA0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLaakelista"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/clockButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="26dp"
        android:text="@string/aseta_muistutus"
        app:backgroundTint="#34CFA0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calanderButton"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/hylk_muistutus"
        app:backgroundTint="#34CFA0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clockButton"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/buttonLaakelista"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/l_kelista"
        app:backgroundTint="#34CFA0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tervetuloa_k_ytt_m_n_omal_kekalenteria"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/clockTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="51dp"
        android:text="@string/muistutusta_ei_ole_asetettu"
        app:layout_constraintBottom_toTopOf="@+id/buttonLaakelista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>