<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMedicine">

    <TextView
        android:id="@+id/textViewMedicineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_medicine_info_name"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewMedicineActiveIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_medicine_info_active_ingredient"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMedicineDosage" />

    <TextView
        android:id="@+id/textViewMedicineTimesADay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_medicine_info_times_a_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/textViewMedicineActiveIngredient" />

    <TextView
        android:id="@+id/textViewMedicineDosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_medicine_info_dosage"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMedicineName"
        app:layout_constraintVertical_bias="0.32999998" />
</androidx.constraintlayout.widget.ConstraintLayout>